<resources>
    <string name="app_name">법Join</string>
    <string name="tv_law_word_main">법률 용어 해석</string>
    <string name="chat_edt_hint">Write here</string>
    <string name="btn_law_word_back">단어 목차로</string>
    <string name="str_law_word_previous">이전</string>
    <string name="str_law_word_next">다음</string>
    <string name="str_lawyer_list_main">시흥시 변호사 찾기</string>
    <string name="str_edt_lawyer_search">검색</string>
    <string name="str_law_word_title">법률 용어 찾기</string>
    <string name="counsel_board_title">상담 게시판</string>
    <string name="free_board_title">자유 게시판</string>
    <string name="free_board_search">검색</string>
    <string name="free_board_write">글쓰기</string>
    <string name="write_title">제목</string>
    <string name="write_main_content">내용</string>
    <string name="write_write">글쓰기</string>
    <string name="write_anynomous">익명으로 쓰기</string>
    <string name="write_read_only_lawyer">변호사만 보기</string>
    <string name="loadong_lawjoin">법Join</string>
    <string name="start_page1_text1">Gpt와 법Join Bot에게 법률에 관해 물어보세요</string>
    <string name="start_page1_text2">Gpt와 법Join Bot이 친절하게 질문에 대답합니다.</string>
    <string name="start_page2_text1">다양한 법률 용어를 찾아보세요</string>
    <string name="start_page2_text2">앱에서 제공해주는 다양한 법률 용어를 확인하세요. 특정 법률 용어를 북마크 할 수 있습니다. </string>
    <string name="start_page3_text1">상담 정보를 공유하세요</string>
    <string name="start_page3_text2">다른 사용자들과 게시판을 통해서 정보를 공유할 수 있습니다. 상담받은 후기를 생생하게 전해주세요.</string>
    <string name="start_page_skip">넘김</string>
    <string name="start_page_next">시작하기</string>
    <string name="post_title">게시글</string>
    <string name="notice_title">공지사항</string>
    <string name="msg_career">경력</string>
    <string name="msg_certificate">자격증</string>
    <string name="msg_category">전문 분야</string>
    <string name="msg_lawyer_info">변호사 정보</string>
    <string name="msg_counsel_case">상담 사례</string>
    <string name="msg_counsel_review">상담 후기</string>
    <string name="msg_law_counsel_reservation">법률 상담 예약</string>
    <string name="msg_reservation_detail">상담 내용</string>
    <string name="hint_reservation_derail">상담 주제와 내용을 간략히 적어주세요.</string>
    <string name="msg_reservation_confirm">예약하기</string>
    <string name="msg_reservation_date">날짜</string>
    <string name="msg_like">좋아요</string>
    <string name="msg_share">공유하기</string>
    <string name="msg_start_chat">채팅하기</string>
    <string name="msg_start_reservation">상담 예약</string>
    <string name="src_main_title">법Join Chat</string>
    <string name="msg_chat">채팅</string>
    <string name="msg_lawyer">변호사</string>
    <string name="msg_law_word">법률 용어</string>
    <string name="msg_post">게시판</string>
    <string name="msg_write_with_anonymous">익명으로 쓰기</string>
    <string name="msg_only_see_lawyer">변호사만 보기</string>
    <string name="msg_write_post">글쓰기</string>
    <string name="msg_reservation_time">시간</string>
    <string name="msg_write_comment">댓글 쓰기</string>
    <string name="msg_welcome">환영합니다</string>
    <string name="msg_account_login">계정 로그인</string>
    <string name="msg_account_signup">회원가입</string>
    <string name="msg_login_google">G 구글로 로그인</string>
    <string name="msg_login_with_email">이메일을 사용해 계정 로그인</string>
    <string name="msg_signup_with_email">이메일을 사용해 계정 회원가입</string>
    <string name="msg_no_account">계정이 없으신가요?</string>
    <string name="msg_signup">회원가입</string>
    <string name="msg_input_name">이름을 입력하세요</string>
    <string name="msg_input_email">이메일을 입력하세요</string>
    <string name="msg_input_password">비밀번호를 입력하세요</string>
    <string name="msg_try_login">로그인하기</string>
    <string name="msg_try_signup">가입하기</string>
    <string name="dsc_login_image">변호사들 사이의 대화를 나타낸다.</string>
    <string name="msg_message_profile">메시지 프로필</string>
    <string name="msg_chat_is_confirmed">1</string>
    <string name="msg_post_data">제출하기</string>
    <string name="msg_lawyer_input_name">이름을 적어주세요</string>
    <string name="msg_input_lawyer_office">소속 기관의 이름을 적어주세요</string>
    <string name="msg_input_lawyer_office_phone">소속 기관의 번호를 적어주세요</string>
    <string name="msg_input_lawyer_phone">핸드폰 번호를 적어주세요</string>
    <string name="msg_input_lawyer_career">경력을 적어주세요</string>
    <string name="msg_input_lawyer_certificate">취득한 자격증을 적어주세요</string>
    <string name="dsc_sign_up_image">회원가입 이미지</string>
    <string name="msg_bookmark">북마크</string>
    <string name="navigation_drawer_open">open drawer</string>
    <string name="navigation_drawer_close">drawer_close</string>
    <string name="post_write_title">게시글 제목 쓰기</string>
    <string name="post_write_contents">게시글 내용 쓰기</string>
    <string name="personal_information_protect_policy"><![CDATA[개인정보처리방침 < 법join >은(는) 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다. ○ 이 개인정보처리방침은 2023년 6월 24부터 적용됩니다. 제1조(개인정보의 처리 목적) < 법join >(\'없음\'이하 \'없음\')은(는) 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다. 1. 홈페이지 회원가입 및 관리 회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리, 서비스 부정이용 방지, 만14세 미만 아동의 개인정보 처리 시 법정대리인의 동의여부 확인, 각종 고지·통지, 고충처리 목적으로 개인정보를 처리합니다. 2. 재화 또는 서비스 제공 서비스 제공, 본인인증, 연령인증을 목적으로 개인정보를 처리합니다. 제2조(개인정보의 처리 및 보유 기간) ① < 법join >은(는) 법령에 따른 개인정보 보유·이용기간 또는 정보주체로부터 개인정보를 수집 시에 동의받은 개인정보 보유·이용기간 내에서 개인정보를 처리·보유합니다. ② 각각의 개인정보 처리 및 보유 기간은 다음과 같습니다. 1 와 관련한 개인정보는 수집.이용에 관한 동의일로부터까지 위 이용목적을 위하여 보유.이용됩니다. 보유근거 : 보유근거 : 「개인정보보호법」 제15조(개인정보의 수집·이용) 제1항 관련법령 : 신용정보의 수집/처리 및 이용 등에 관한 기록 : 3년 예외사유 : 제3조(처리하는 개인정보의 항목) ① < 법join >은(는) 다음의 개인정보 항목을 처리하고 있습니다. 제4조(개인정보의 제3자 제공에 관한 사항) ① < 법join >은(는) 개인정보를 제1조(개인정보의 처리 목적)에서 명시한 범위 내에서만 처리하며, 정보주체의 동의, 법률의 특별한 규정 등 「개인정보 보호법」 제17조 및 제18조에 해당하는 경우에만 개인정보를 제3자에게 제공합니다. ② < 법join >은(는) 다음과 같이 개인정보를 제3자에게 제공하고 있습니다. 1. < 법join > 개인정보를 제공받는 자 : 법join 제공받는 자의 개인정보 이용목적 : 제공받는 자의 보유.이용기간: 제5조(개인정보처리의 위탁에 관한 사항) ① < 법join >은(는) 원활한 개인정보 업무처리를 위하여 다음과 같이 개인정보 처리업무를 위탁하고 있습니다. 1. < Firebase > 위탁받는 자 (수탁자) : Firebase 위탁하는 업무의 내용 : Firebase 를 통한 앱의 활동데이터 위탁기간 : 3년 ② < 법join >은(는) 위탁계약 체결시 「개인정보 보호법」 제26조에 따라 위탁업무 수행목적 외 개인정보 처리금지, 기술적?관리적 보호조치, 재위탁 제한, 수탁자에 대한 관리?감독, 손해배상 등 책임에 관한 사항을 계약서 등 문서에 명시하고, 수탁자가 개인정보를 안전하게 처리하는지를 감독하고 있습니다. ③ 위탁업무의 내용이나 수탁자가 변경될 경우에는 지체없이 본 개인정보 처리방침을 통하여 공개하도록 하겠습니다. 제6조(개인정보의 파기절차 및 파기방법) ① < 법join > 은(는) 개인정보 보유기간의 경과, 처리목적 달성 등 개인정보가 불필요하게 되었을 때에는 지체없이 해당 개인정보를 파기합니다. ② 정보주체로부터 동의받은 개인정보 보유기간이 경과하거나 처리목적이 달성되었음에도 불구하고 다른 법령에 따라 개인정보를 계속 보존하여야 하는 경우에는, 해당 개인정보를 별도의 데이터베이스(DB)로 옮기거나 보관장소를 달리하여 보존합니다. 1. 법령 근거 : 2. 보존하는 개인정보 항목 : 계좌정보, 거래날짜 ③ 개인정보 파기의 절차 및 방법은 다음과 같습니다. 1. 파기절차 < 법join > 은(는) 파기 사유가 발생한 개인정보를 선정하고, < 법join > 의 개인정보 보호책임자의 승인을 받아 개인정보를 파기합니다. 2. 파기방법 전자적 파일 형태의 정보는 기록을 재생할 수 없는 기술적 방법을 사용합니다 제7조(정보주체와 법정대리인의 권리·의무 및 그 행사방법에 관한 사항) ① 정보주체는 법join에 대해 언제든지 개인정보 열람·정정·삭제·처리정지 요구 등의 권리를 행사할 수 있습니다. ② 제1항에 따른 권리 행사는법join에 대해 「개인정보 보호법」 시행령 제41조제1항에 따라 서면, 전자우편, 모사전송(FAX) 등을 통하여 하실 수 있으며 법join은(는) 이에 대해 지체 없이 조치하겠습니다. ③ 제1항에 따른 권리 행사는 정보주체의 법정대리인이나 위임을 받은 자 등 대리인을 통하여 하실 수 있습니다.이 경우 “개인정보 처리 방법에 관한 고시(제2020-7호)” 별지 제11호 서식에 따른 위임장을 제출하셔야 합니다. ④ 개인정보 열람 및 처리정지 요구는 「개인정보 보호법」 제35조 제4항, 제37조 제2항에 의하여 정보주체의 권리가 제한 될 수 있습니다. ⑤ 개인정보의 정정 및 삭제 요구는 다른 법령에서 그 개인정보가 수집 대상으로 명시되어 있는 경우에는 그 삭제를 요구할 수 없습니다. ⑥ 법join은(는) 정보주체 권리에 따른 열람의 요구, 정정·삭제의 요구, 처리정지의 요구 시 열람 등 요구를 한 자가 본인이거나 정당한 대리인인지를 확인합니다. 제8조(개인정보의 안전성 확보조치에 관한 사항) < 법join >은(는) 개인정보의 안전성 확보를 위해 다음과 같은 조치를 취하고 있습니다. 1. 개인정보에 대한 접근 제한 개인정보를 처리하는 데이터베이스시스템에 대한 접근권한의 부여,변경,말소를 통하여 개인정보에 대한 접근통제를 위하여 필요한 조치를 하고 있으며 침입차단시스템을 이용하여 외부로부터의 무단 접근을 통제하고 있습니다. 2. 접속기록의 보관 및 위변조 방지 개인정보처리시스템에 접속한 기록을 최소 1년 이상 보관, 관리하고 있으며,다만, 5만명 이상의 정보주체에 관하여 개인정보를 추가하거나, 고유식별정보 또는 민감정보를 처리하는 경우에는 2년이상 보관, 관리하고 있습니다. 또한, 접속기록이 위변조 및 도난, 분실되지 않도록 보안기능을 사용하고 있습니다. 3. 개인정보의 암호화 이용자의 개인정보는 비밀번호는 암호화 되어 저장 및 관리되고 있어, 본인만이 알 수 있으며 중요한 데이터는 파일 및 전송 데이터를 암호화 하거나 파일 잠금 기능을 사용하는 등의 별도 보안기능을 사용하고 있습니다. 제9조(개인정보를 자동으로 수집하는 장치의 설치·운영 및 그 거부에 관한 사항) 법join 은(는) 정보주체의 이용정보를 저장하고 수시로 불러오는 ‘쿠키(cookie)’를 사용하지 않습니다. 제10조(행태정보의 수집·이용·제공 및 거부 등에 관한 사항) 행태정보의 수집·이용·제공 및 거부등에 관한 사항 은(는) 온라인 맞춤형 광고 등을 위한 행태정보를 수집·이용·제공하지 않습니다. 제11조(추가적인 이용·제공 판단기준) < 법join > 은(는) ?개인정보 보호법? 제15조제3항 및 제17조제4항에 따라 ?개인정보 보호법 시행령? 제14조의2에 따른 사항을 고려하여 정보주체의 동의 없이 개인정보를 추가적으로 이용·제공할 수 있습니다. 이에 따라 < 법join > 가(이) 정보주체의 동의 없이 추가적인 이용·제공을 하기 위해서 다음과 같은 사항을 고려하였습니다. ▶ 개인정보를 추가적으로 이용·제공하려는 목적이 당초 수집 목적과 관련성이 있는지 여부 ▶ 개인정보를 수집한 정황 또는 처리 관행에 비추어 볼 때 추가적인 이용·제공에 대한 예측 가능성이 있는지 여부 ▶ 개인정보의 추가적인 이용·제공이 정보주체의 이익을 부당하게 침해하는지 여부 ▶ 가명처리 또는 암호화 등 안전성 확보에 필요한 조치를 하였는지 여부 ※ 추가적인 이용·제공 시 고려사항에 대한 판단기준은 사업자/단체 스스로 자율적으로 판단하여 작성·공개함 제12조(가명정보를 처리하는 경우 가명정보 처리에 관한 사항) < 법join > 은(는) 다음과 같은 목적으로 가명정보를 처리하고 있습니다. ▶ 가명정보의 처리 목적 - 회원가입 및 로그인에 이용합니다. ▶ 가명정보의 처리 및 보유기간 - 오직 회원가입 및 로그인에만 사용되며 보유기간은 3년입니다. ▶ 가명정보의 제3자 제공에 관한 사항(해당되는 경우에만 작성) - Firebase anly. ▶ 가명정보 처리의 위탁에 관한 사항(해당되는 경우에만 작성) - 직접작성 가능합니다. ▶ 가명처리하는 개인정보의 항목 - 직접작성 가능합니다. ▶ 법 제28조의4(가명정보에 대한 안전조치 의무 등)에 따른 가명정보의 안전성 확보조치에 관한 사항 - 직접작성 가능합니다. 제13조 (개인정보 보호책임자에 관한 사항) ① 법join 은(는) 개인정보 처리에 관한 업무를 총괄해서 책임지고, 개인정보 처리와 관련한 정보주체의 불만처리 및 피해구제 등을 위하여 아래와 같이 개인정보 보호책임자를 지정하고 있습니다. ▶ 개인정보 보호책임자 성명 :변우림 직책 :개발자 직급 :개발자 연락처 :01085369746, tost542@naver.com, ※ 개인정보 보호 담당부서로 연결됩니다. ▶ 개인정보 보호 담당부서 부서명 : 담당자 : 연락처 :, , ② 정보주체께서는 법join 의 서비스(또는 사업)을 이용하시면서 발생한 모든 개인정보 보호 관련 문의, 불만처리, 피해구제 등에 관한 사항을 개인정보 보호책임자 및 담당부서로 문의하실 수 있습니다. 법join 은(는) 정보주체의 문의에 대해 지체 없이 답변 및 처리해드릴 것입니다. 제14조(국내대리인의 지정) 정보주체는 ?개인정보 보호법? 제39조의11에 따라 지정된 < 법join >의 국내대리인에게 개인정보 관련 고충처리 등의 업무를 위하여 연락을 취할 수 있습니다. < 법join >은(는) 정보주체의 개인정보 관련 고충처리 등 개인정보 보호책임자의 업무 등을 신속하게 처리할 수 있도록 노력하겠습니다. ▶ < 법join > 은(는) ?개인정보 보호법? 제39조의11에 따라 국내대리인을 지정하였습니다. - 국내대리인의 성명 : [대리인 성명_직접입력] (법인의 경우 법인명, 대표자의 성명) - 국내대리인의 주소 : [대리인 주소_직접입력] (법인의 경우 영업소 소재지) - 국내대리인의 전화번호 : [대리인 전화번호_직접입력] - 국내대리인의 전자우편 주소 : [대리인 전자우편_직접입력] 제15조(개인정보의 열람청구를 접수·처리하는 부서) 정보주체는 ?개인정보 보호법? 제35조에 따른 개인정보의 열람 청구를 아래의 부서에 할 수 있습니다. < 법join >은(는) 정보주체의 개인정보 열람청구가 신속하게 처리되도록 노력하겠습니다. ▶ 개인정보 열람청구 접수·처리 부서 부서명 : 담당자 : 연락처 : , , 제16조(정보주체의 권익침해에 대한 구제방법) 정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보분쟁조정위원회, 한국인터넷진흥원 개인정보침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의하시기 바랍니다. 1. 개인정보분쟁조정위원회 : (국번없이) 1833-6972 (www.kopico.go.kr) 2. 개인정보침해신고센터 : (국번없이) 118 (privacy.kisa.or.kr) 3. 대검찰청 : (국번없이) 1301 (www.spo.go.kr) 4. 경찰청 : (국번없이) 182 (ecrm.cyber.go.kr) 「개인정보보호법」제35조(개인정보의 열람), 제36조(개인정보의 정정·삭제), 제37조(개인정보의 처리정지 등)의 규정에 의한 요구에 대 하여 공공기관의 장이 행한 처분 또는 부작위로 인하여 권리 또는 이익의 침해를 받은 자는 행정심판법이 정하는 바에 따라 행정심판을 청구할 수 있습니다. ※ 행정심판에 대해 자세한 사항은 중앙행정심판위원회(www.simpan.go.kr) 홈페이지를 참고하시기 바랍니다. 제17조(영상정보처리기기 운영·관리에 관한 사항) ① < 법join >은(는) 아래와 같이 영상정보처리기기를 설치·운영하고 있습니다. 1.영상정보처리기기 설치근거·목적 : < 법join >의 2.설치 대수, 설치 위치, 촬영 범위 : 설치대수 : 대 설치위치 : 촬영범위 : 3.관리책임자, 담당부서 및 영상정보에 대한 접근권한자 : 4.영상정보 촬영시간, 보관기간, 보관장소, 처리방법 촬영시간 : 시간 보관기간 : 촬영시부터 보관장소 및 처리방법 : 5.영상정보 확인 방법 및 장소 : 6.정보주체의 영상정보 열람등요구에 대한 조치 : 개인영상정보 열람.존재확인 청구서로 신청하여야 하며, 정보주체 자신이 촬영된 경우 또는 명백히 정보주체의 생명.신체.재산 이익을 위해 필요한 경우에 한해 열람을 허용함 7.영상정보처리기기 설치근거·목적 : 제18조(개인정보 처리방침 변경) ① 이 개인정보처리방침은 2023년 6월 24부터 적용됩니다. ② 이전의 개인정보 처리방침은 아래에서 확인하실 수 있습니다.]]></string>
    <string name="msg_agree">동의</string>
    <string name="msg_desc_arrow">화살표</string>
    <string name="msg_hint_category">상담받은 카테고리</string>
    <string name="msg_hint_review_title">리뷰 제목</string>
    <string name="msg_review_content">리뷰 내용</string>
    <string name="msg_write_review">리뷰쓰기</string>
    <string name="desc_main_message">메인 메시지 아이콘</string>
    <string name="desc_main_lawyer">메인 화면 변호사 아이콘</string>
    <string name="desc_law_word">메인 화면 법률 단어 아이콘</string>
    <string name="desc_post">메인 화면 게시글 아이콘</string>
    <string name="msg_free_counsel">시흥시 무료 상담 예약하기</string>
    <string name="msg_account_manage">계정 관리</string>
    <string name="msg_reservation_cancel">예약 취소</string>
    <string name="msg_reservation_change">예약 변경</string>
    <string name="msg_back_main">메인 화면</string>
    <string name="msg_logout">로그아웃</string>
    <string name="msg_my_post">내가 쓴 글 보기</string>
    <string name="msg_post_bookmark">북마크한 게시글 보기</string>
    <string name="msg_like_lawyer">좋아요한 변호사</string>
</resources>