<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ly_lawyer_list_main"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/str_lawyer_list_main"
        android:textStyle="bold"
        android:textColor="#424242"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/edt_chat_search"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_lawyer_list_search"
        android:drawableStart="@drawable/ic_lawyer_list_search__normal"
        android:hint="@string/str_edt_lawyer_search"
        android:paddingTop="5dp"
        android:paddingStart="10dp"
        android:paddingBottom="5dp"
        android:paddingEnd="10dp"
        android:inputType="text"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <Button
        android:id="@+id/fb_free_counsel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_write_post"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/msg_free_counsel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_chat_search"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_lawyer_list"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/ly_bottom_bar"
        app:layout_constraintTop_toBottomOf="@id/fb_free_counsel"/>

    <LinearLayout
        android:id="@+id/ly_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_chat_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/ib_main_message"
                android:contentDescription="@string/desc_main_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_main_chat"/>
            <TextView
                android:text = "@string/msg_chat"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/ib_main_lawyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_main_lawyer"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_main_lawyer"/>
            <TextView
                android:text = "@string/msg_lawyer"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/ib_main_law_word"
                android:contentDescription="@string/desc_law_word"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_main_law_word"/>
            <TextView
                android:text = "@string/msg_law_word"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/ib_main_post"
                android:contentDescription="@string/desc_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/selector_main_post"/>
            <TextView
                android:text="@string/msg_post"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>