<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_sign_up_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="38dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/bg_sign_up"
        android:contentDescription="@string/dsc_sign_up_image"/>

    <TextView
        android:id="@+id/tv_sign_up_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/msg_welcome"
        android:textColor="#740F2D52"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_sign_up_image" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_account_signup"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#0F2D52"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_hello" />


    <TextView
        android:id="@+id/tv_sign_up_with_emain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/msg_signup_with_email"
        android:textColor="#A60F2D52"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_up_hello"
        app:layout_constraintBottom_toTopOf="@id/edt_sign_up_name"/>

    <EditText
        android:id="@+id/edt_sign_up_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_round"
        android:ems="10"
        android:padding="10dp"
        android:hint="@string/msg_input_name"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_up_with_emain"/>

    <EditText
        android:id="@+id/edt_sign_up_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_round"
        android:ems="10"
        android:padding="10dp"
        android:hint="@string/msg_input_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_sign_up_name"/>

    <EditText
        android:id="@+id/edt_sign_up_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_round"
        android:ems="10"
        android:hint="@string/msg_input_password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_sign_up_email"/>

    <ScrollView
        android:id="@+id/sv_personal_info_protect_policy"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/edt_sign_up_password">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_personal_info_protect_policy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/personal_information_protect_policy"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </LinearLayout>
    </ScrollView>

    <CheckBox
        android:id="@+id/cb_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_agree"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/sv_personal_info_protect_policy"/>

    <Button
        android:id="@+id/btn_start_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_write_post"
        android:text="@string/msg_try_signup"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_agree" />
</androidx.constraintlayout.widget.ConstraintLayout>