<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:clipToOutline="true">

    <TextView
        android:id="@+id/idManagement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="39dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/msg_account_manage"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black" />

    <ImageView
        android:id="@+id/rectangle_2"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/idManagement"
        android:layout_marginTop="13dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_rectangle_background" />

    <TextView
        android:id="@+id/reservationDate"
        android:layout_width="293dp"
        android:layout_height="32dp"
        app:layout_constraintTop_toTopOf="@id/rectangle_2"
        android:layout_marginTop="19dp"
        app:layout_constraintLeft_toLeftOf="@id/rectangle_2"
        android:layout_marginStart="30dp"
        android:textSize="24sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/reservationLawyer"
        android:layout_width="81dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="@id/rectangle_2"
        android:layout_marginTop="51dp"
        app:layout_constraintLeft_toLeftOf="@id/rectangle_2"
        android:layout_marginStart="30dp"
        android:textSize="14sp"
        android:fontFamily="sans-serif" />
    <Button
        android:id="@+id/reservationCancelBtn"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_2"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf ="@id/rectangle_2"
        android:layout_marginStart="35dp"
        android:text="@string/msg_reservation_cancel"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:backgroundTint="#E16767" />
    <Button
        android:id="@+id/reservationChangeBtn"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/rectangle_2"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toRightOf="@id/rectangle_2"
        android:layout_marginEnd="35dp"
        android:text="@string/msg_reservation_change"
        android:textSize="12sp"
        android:fontFamily="sans-serif"
        android:textColor="@color/white"
        android:backgroundTint="#2673D1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toBottomOf="@id/rectangle_2"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <View
            android:id="@+id/divide_line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d3d3d3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteX="4dp"/>

        <Button
            android:id="@+id/btn_my_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/msg_my_post"
            android:textAlignment="viewStart"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"/>
        <View
            android:id="@+id/divide_line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d3d3d3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteX="4dp"/>

        <Button
            android:id="@+id/btn_bookmarked_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/msg_post_bookmark"
            android:textAlignment="viewStart"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"/>
        <View
            android:id="@+id/divide_line4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d3d3d3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteX="4dp"/>

        <Button
            android:id="@+id/btn_like_lawyer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/msg_like_lawyer"
            android:textAlignment="viewStart"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"/>

        <View
            android:id="@+id/divide_line5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#d3d3d3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteX="4dp"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/msg_logout"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:backgroundTint="@android:color/holo_red_light"/>

        <Button
            android:id="@+id/mainBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="30dp"
            android:text="@string/msg_back_main"
            android:textSize="16sp"
            android:fontFamily="sans-serif"
            android:textColor="@color/white"
            android:backgroundTint="#2673D1"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>